Fixed alignment in fullscreen window desktop
	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 *
 {
+    
     text-align: center;
     font-weight: bold;
 }
@@ -9,9 +10,10 @@
 h1
 {
     text-align: center;
-    margin-left: 55px;
+    margin-left: 550px;
+    margin-right: 550px;
     border-style:groove;
-    border-width: 3px;
+    border-width: 5px;
     border-color: black;
     background-color: orangered;
     color: white;
@@ -19,8 +21,8 @@ h1
 
 p
 {
-    margin-left: 135px;
-    margin-right: 135px;
+    margin-left: 635px;
+    margin-right: 635px;
     border-style: groove;
     border-color: black;
     background-color: orangered;
